--- a/index.html
+++ b/index.html
@@ -19,57 +19,57 @@
     <section class="main-content container_12">
       <!-- a box -->
       <div class="box 1">
-        <img src="http://placehold.it/350x150/f30/fff">
-        <h2><a href="#" target="_blank">A Title of a News Article</a></h2>
-        <p>Donec consequat venenatis orci, nec aliquet est mattis et. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Quisque id nunc at tortor aliquet viverra faucibus sed eros. Nunc porta eros non euismod pulvinar. Phasellus nec vehicula augue. Etiam egestas purus eget consectetur porta. Cras condimentum mi id justo bibendum egestas. Aliquam in est a nunc dapibus dictum. Sed tellus est, luctus non dictum non, consectetur eu felis. Maecenas venenatis ligula eu odio ultrices, vel sagittis orci fringilla. Integer arcu magna, pellentesque quis mi accumsan, eleifend laoreet turpis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-        <a class="read-more" href="#" target="_blank">Read more...</a></p>
+        <img src="img/roster.jpg">
+        <h2><a href="http://www.packers.com/team/players.html" target="_blank">Player Roster</a></h2>
+        <p>Find out which packers are already on the time and what new players will be joining them this year!
+        <a class="read-more" href="http://www.packers.com/team/players.html" target="_blank">Read more...</a></p>
       </div> <!-- end box -->
 
       <!-- a box -->
       <div class="box 2">
-        <img src="http://placehold.it/350x150/f30/fff">
-        <h2><a href="#" target="_blank">A Title of a News Article</a></h2>
-        <p>Fusce viverra molestie finibus. Maecenas eu augue vitae libero tincidunt varius. Ut velit nunc, dignissim et gravida vel, posuere et libero. Aenean luctus, libero vel porta mattis, massa odio consequat lectus, at placerat massa lacus non ligula. Pellentesque rhoncus nunc sit amet dui dapibus, ut egestas odio fermentum. Donec condimentum dapibus justo. Praesent malesuada sed metus nec posuere.
-        <a class="read-more" href="#" target="_blank">Read more...</a></p>
+        <img src="img/teamstats.jpg">
+        <h2><a href="http://www.packers.com/team/statistics.html" target="_blank">Team Statistics</a></h2>
+        <p>Your Packers 2015 team statistics and past season stats. See how your packers have performed over the last several years and see which key players are returning for 2016.
+        <a class="read-more" href="http://www.packers.com/team/statistics.html" target="_blank">Read more...</a></p>
       </div> <!-- end box -->
 
       <!-- a box -->
       <div class="box 3">
-        <img src="http://placehold.it/350x150/f30/fff">
-        <h2><a href="#" target="_blank">A Title of a News Article</a></h2>
-        <p>Vestibulum laoreet ultrices nisi ut ullamcorper. Aenean mattis mauris enim, ac egestas augue aliquam quis. Phasellus eget luctus arcu, sed volutpat erat. Donec laoreet condimentum elit, quis lobortis dui efficitur et. Fusce elementum bibendum felis, eu egestas lectus porttitor sit amet.
-        <a class="read-more" href="#" target="_blank">Read more...</a></p>
+        <img src="img/schedule.jpg">
+        <h2><a href="http://www.packers.com/gameday/schedule.html" target="_blank">2016 Team Schedule</a></h2>
+        <p>See who the packers will be playing this year and find out when they will be coming to a city near you. This will also show you who the packers will be playing at home and away for the 2016 season.
+        <a class="read-more" href="http://www.packers.com/gameday/schedule.html" target="_blank">Read more...</a></p>
       </div> <!-- end box -->
 
       <!-- a box -->
       <div class="box 4">
-        <img src="http://placehold.it/350x150/f30/fff">
-        <h2><a href="#" target="_blank">A Title of a News Article</a></h2>
-        <p>Fusce viverra molestie finibus. Maecenas eu augue vitae libero tincidunt varius. Ut velit nunc, dignissim et gravida vel, posuere et libero. Aenean luctus, libero vel porta mattis, massa odio consequat lectus, at placerat massa lacus non ligula. Pellentesque rhoncus nunc sit amet dui dapibus, ut egestas odio fermentum. Donec condimentum dapibus justo. Praesent malesuada sed metus nec posuere.
-        <a class="read-more" href="#" target="_blank">Read more...</a></p>
+        <img src="img/buildingpackers.jpg">
+        <h2><a href="http://www.packers.com/team/howbuilt.html" target="_blank">Building of the Packers</a></h2>
+        <p>Learn what year each player on the current roster was drafted and what year they joined the Green Bay Packers.
+        <a class="read-more" href="img/buildingpackers.jpg" target="_blank">Read more...</a></p>
       </div> <!-- end box -->
 
       <!-- a box -->
       <div class="box 5">
-        <img src="http://placehold.it/350x150/f30/fff">
-        <h2><a href="#" target="_blank">A Title of a News Article</a></h2>
-        <p>Fusce viverra molestie finibus. Maecenas eu augue vitae libero tincidunt varius. Ut velit nunc, dignissim et gravida vel, posuere et libero. Aenean luctus, libero vel porta mattis, massa odio consequat lectus, at placerat massa lacus non ligula. Pellentesque rhoncus nunc sit amet dui dapibus, ut egestas odio fermentum. Donec condimentum dapibus justo. Praesent malesuada sed metus nec posuere.
-        <a class="read-more" href="#" target="_blank">Read more...</a></p>
+        <img src="img/trending.jpg">
+        <h2><a href="http://www.packers.com/news-and-events/most-read.html" target="_blank">Trending News</a></h2>
+        <p>Look no further for all of the current trending news regarding your Green Bay Packers. This page contains current signings, in depth position analysis and much more detailed information on the packers and there players.
+        <a class="read-more" href="http://www.packers.com/news-and-events/most-read.html" target="_blank">Read more...</a></p>
       </div> <!-- end box -->
 
       <!-- a box -->
       <div class="box 6">
-        <img src="http://placehold.it/350x150/f30/fff">
-        <h2><a href="#" target="_blank">A Title of a News Article</a></h2>
-        <p>Fusce viverra molestie finibus. Maecenas eu augue vitae libero tincidunt varius. Ut velit nunc, dignissim et gravida vel, posuere et libero. Aenean luctus, libero vel porta mattis, massa odio consequat lectus, at placerat massa lacus non ligula. Pellentesque rhoncus nunc sit amet dui dapibus, ut egestas odio fermentum. Donec condimentum dapibus justo. Praesent malesuada sed metus nec posuere.
-        <a class="read-more" href="#" target="_blank">Read more...</a></p>
+        <img src="img/blog.jpg">
+        <h2><a href="http://blog.packers.com/" target="_blank">Packers Blog</a></h2>
+        <p>Blog for all things Packers. See what people are saying about the Pack for this upcoming season.
+        <a class="read-more" href="http://blog.packers.com/" target="_blank">Read more...</a></p>
       </div> <!-- end box -->
 
 
     </section>
 
     <section class="footer">
-      <p>Details about your site and such.</p>
+      <p>Copyright Jake Deavers 2016</p>
     </section>
 
 
